--- a/fuksipassi/public/index.html
+++ b/fuksipassi/public/index.html
@@ -21,7 +21,8 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #F2F3F4">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
