--- a/fuksipassi/public/index.html
+++ b/fuksipassi/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +21,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #F2F3F4">
+  <body style="background-color: #A8A8A8">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
