Added the functionality  to register to  password protected areas also. Added post it notes as cards and a image of pin to each card. Fixed some errors and bugs.

--- a/fuksipassi/public/index.html
+++ b/fuksipassi/public/index.html
@@ -14,14 +14,14 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
+"background-color: #A8A8A8"
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #A8A8A8">
+  <body style="background-image: url(https://images.unsplash.com/photo-1519972064555-542444e71b54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80)">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
